# zescrow

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
adapters/: Cargo.toml
adapters/ethereum/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
adapters/ethereum/contracts/: Escrow.sol  EscrowFactory.sol  MockVerifier.sol
adapters/ethereum/test/: escrow.test.ts
adapters/solana/: Anchor.toml  Cargo.toml
adapters/solana/escrow/: Anchor.toml
adapters/solana/escrow/programs/escrow/: Cargo.toml
adapters/solana/escrow/programs/escrow/src/: lib.rs
adapters/solana/escrow/tests/: escrow.ts
adapters/solana/programs/escrow/: Cargo.toml
adapters/solana/programs/escrow/src/: lib.rs
adapters/solana/programs/zkescrow/: Cargo.toml
adapters/solana/programs/zkescrow/src/: lib.rs
adapters/solana/tests/: escrow.ts  zkescrow.ts
agent/ethereum/: hardhat.config.ts  package-lock.json  package.json
agent/ethereum/contracts/: Escrow.sol  EscrowFactory.sol
agent/ethereum/scripts/: deploy.ts
agent/ethereum/test/: escrow.test.ts
agent/solana/escrow/: Anchor.toml  package.json  tsconfig.json
agent/solana/escrow/programs/escrow/: Cargo.toml
agent/solana/escrow/programs/escrow/src/: lib.rs
agent/solana/escrow/tests/: escrow.ts
agents/ethereum/scripts/: deploy.ts
agents/solana/escrow/: Anchor.toml  package.json
assets/: escrow.json
client/: Cargo.toml  README.md
client/abi/: Escrow.json
client/methods/: Cargo.toml
client/methods/guest/: Cargo.toml
client/methods/guest/src/: main.rs
client/src/: agent.rs  agents.rs  error.rs  ethereum.rs  ethereum_agent.rs  interface.rs  lib.rs  main.rs  prover.rs  solana.rs  solana_agent.rs  util.rs  utils.rs
client/src/agent/: ethereum.rs  solana.rs
client/src/agents/: ethereum.rs  solana.rs
core/: Cargo.toml  README.md
core/src/: asset.rs  assets.rs  bignum.rs  condition.rs  conditions.rs  crypto.rs  error.rs  escrow.rs  identity.rs  interface.rs  lib.rs  serde.rs  types.rs  utils.rs
core/src/condition/: ed25519.rs  hashlock.rs  secp256k1.rs  threshold.rs
core/src/crypto/: mock.rs
core/tests/: e2e.rs
demos/: README.md  create_sol_account.sh  ethereum_demo.md  solana_demo.md
deploy/: .env.template  README.md  create_recipient_sol.sh  escrow_conditions.json  verify.sh
deploy/ethereum/: escrow_params.json  run.sh
deploy/solana/: escrow_params.json  run.sh
docs/: ethereum_demo.md  solana_demo.md
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
prover/: Cargo.toml
prover/methods/: Cargo.toml
prover/methods/guest/: Cargo.toml
prover/methods/guest/src/: main.rs
prover/src/: lib.rs  main.rs  utils.rs
scripts/solana/: README.md  codma.ts  package.json
scripts/solana/bad-verifier/programs/: testBadVerifier.ts
scripts/solana/groth16/programs/: groth16Verifier.ts
scripts/solana/idl/: loader-v3.json
scripts/solana/verify-router/programs/: verifierRouter.ts
templates/: README.md  create_sol_account.sh  escrow_conditions.json  escrow_params.json  ethereum_config.json  solana_config.json
