[package]
name = "zescrow-client"
version = "0.1.0"
description = "The Zescrow client CLI and RISC Zero zkVM (prover)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maatlabs/zescrow"
homepage = "https://github.com/maatlabs/zescrow"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
bincode = { version = "2", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
ethers = { version = "2", features = ["rustls"] }
hex = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
risc0-zkvm = { version = "3", features = ["unstable"] }
rustc-hex = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
solana-client = "2"
solana-sdk = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["std"] }

[dependencies.zescrow-core]
path = "../core"
default-features = false
features = ["bincode", "json"]

[dependencies.zescrow-methods]
path = "methods"

[dependencies.escrow]
path = "../agent/solana/escrow/programs/escrow"
features = ["no-entrypoint"]
