[package]
name = "zescrow-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["bincode"]
bincode = []
json = ["serde", "serde_json", "serde_bytes", "serde_with", "serde-big-array"]

[dependencies]
hex = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
sha2 = "0.10.9"
subtle = "2.6.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
bs58 = "0.5.1"
base64 = "0.22.1"
anyhow = "1.0.98"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"

bincode = { version = "2", features = ["derive"] }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
serde_bytes = { version = "0.11.17", optional = true }
serde_with = { version = "3.12.0", features = ["hex"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }
