[package]
name = "zescrow-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
zescrow-methods = { path = "../methods" }
zescrow-core = { path = "../core" }
risc0-zkvm = { version = "2.1.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
