[package]
name = "zescrow-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.1", features = ["derive"] }
hex = "0.4"
zescrow-methods = { path = "../methods" }
zescrow-core = { path = "../core", default-features = false, features = [
    "bincode",
    "json",
] }
risc0-zkvm = { version = "2.1.0", features = ["unstable"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
groth_16_verifier = { path = "../agents/solana/risc0-solana/solana-verifier/programs/groth_16_verifier", features = [
    "no-entrypoint",
    "client",
] }
