[package]
name = "zescrow-prover"
version = "0.1.0"
description = "RISC Zero zkVM prover for Zescrow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maatlabs/zescrow"
homepage = "https://github.com/maatlabs/zescrow"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = { version = "2", features = ["derive"] }
risc0-zkvm = { version = "3", features = ["unstable"] }
thiserror = "2"
tracing = "0.1"

[dependencies.zescrow-core]
path = "../core"
default-features = false
features = ["bincode", "json"]

[dependencies.zescrow-methods]
path = "methods"
