[workspace]
members = [
    "programs/escrow",
    "programs/risc0-solana/solana-verifier/programs/groth_16_verifier",
    "programs/risc0-solana/solana-verifier/programs/test_bad_verifier",
    "programs/risc0-solana/solana-verifier/programs/verifier_router",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
