[package]
name = "zescrow_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bincode = { version = "2", default-features = false, features = ["alloc"] }
risc0-zkvm = { version = "3", default-features = false, features = [
    'std',
    "unstable",
] }
zescrow-core = { path = "../../../core", default-features = false, features = [
    "bincode",
] }
