[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
groth_16_verifier = { path = "../../../risc0-solana/solana-verifier/programs/groth_16_verifier" }
verifier_router = { path = "../../../risc0-solana/solana-verifier/programs/verifier_router", features = [
    "cpi",
] }
