[package]
name = "escrow"
version = "0.2.0"
description = "Zescrow Solana program with XRPL-style time-lock semantics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maatlabs/zescrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

# Suppress cfg warnings from Anchor/Solana macro expansions (upstream issue)
[lints.rust]
unexpected_cfgs = "allow"
